# Modelling-Control-and-Implementation-of-a-Haptic-System-for-an-Underwater-Robot

./: README.md
bluerov2/: CMakeLists.txt  package.xml  setup.py
bluerov2/config/bluerov2/: vel_pid_control.yaml
bluerov2/csv_files/: chirp_signal.csv  chirp_signal_1.5deg.csv  chirp_signal_1.5deg_1.csv  chirp_signal_3deg.csv  chirp_signal_5deg.csv  inputaprbs.csv  linear_chirp_3deg.csv  logaritmic_chirp_3deg.csv  sin_1.csv  sin_10_1.csv  sin_1_1.csv  sin_2.csv  sin_2_1.csv  sin_3.csv  sin_3_1.csv  sin_4.csv  sin_4_1.csv  sin_5.csv  sin_5_1.csv  sin_6_1.csv  sin_7_1.csv  sin_8_1.csv  sin_9_1.csv
bluerov2/launch/: bluerov.launch  bluerov2_teleop_keyboard.launch  identification.launch  key_board_velocity.launch  opencm904.launch  record.launch
bluerov2/msg/: FTSensor.msg
bluerov2/nodes/: bluerov2_controller.py  bluerov2_node.py  bluerov2_teleop.py  identification_motors_test.py  opencm904_control.py  opencm904_node.py  opencm904_teleop.py  test_step_motor.py
bluerov2/src/: VelocityControl.py  bluerov2_bridge_mavlink.py  bluerov2_controller.py  bluerov2_node.py  bluerov2_teleop.py  identification_motors_test.py  opencm904_control.py  opencm904_node.py  opencm904_teleop.py
bluerov2/src/old/: bluerov2_control.py  bluerov2_node_1.py  bridge_mavlink.py  bridge_mavlink_1.py  send_cmd_vel.py
bluerov2/src/utils/: VelocityControl.py  bluerov2_bridge_mavlink.py  test.py
code_ArduinoUno/: LTC1859.cpp  LTC1859.h  LT_SPI.cpp  LT_SPI.h  Linduino.h  LowPassFilter.c  code_ArduinoUno.ino
code_OpenCM904/: code_OpenCM904.ino
code_OpenCM904/ros/: node_handle.h  service_server.h  subscriber.h
code_OpenCM904/rosserial_msgs/: RequestParam.h  TopicInfo.h
code_OpenCM904/std_msgs/: MultiArrayDimension.h  MultiArrayLayout.h  Time.h
code_openCM904/: ros.h
code_openCM904/ros/: publisher.h  service_client.h  time.h
code_openCM904/rosserial_msgs/: Log.h
code_openCM904/std_msgs/: Int32MultiArray.h  String.h
code_test/: code_OpenCM904_int.ino  code_OpenCM904_no_ir_test_2.ino
scripts_utils/: convert_bag_to_csv.py
